added last project

--- a/index.html
+++ b/index.html
@@ -213,23 +213,23 @@
                     </li>
                     <li class="project">
                         <div class="project__wrapper">
-                            <img src="./assets/blinker mockup.png" class="project__img" alt="">
+                            <img src="./assets/feedback.jpg" class="project__img" alt="">
                             <div class="project__wrapper--bg"></div>
                             <div class="project__description">
                                 <h3 class="project__description--title">
-                                    Project 1
+                                    Feedback Survey
                                 </h3>
                                 <h4 class="project__description--sub-title">
                                     html, CSS, JavaScript, React
                                 </h4>
                                 <p class="project__description--para">
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta harum sit provident fugit vero veniam atque, nam laudantium mollitia magnam exercitationem. Possimus id omnis non aspernatur expedita rem magnam laudantium.
+                                    For this project, A user can write a review on their experience and give it a rating that you can submit to a JSON data base. You can also update your review if you change your mind.
                                 </p>
                                 <div class="project__description--links">
-                                    <a href="#" class="project__description--link" target="_blank">
+                                    <a href="https://github.com/kryp-2nite/feedback-app" class="project__description--link" target="_blank">
                                         <i class="fab fa-github"></i>
                                     </a>
-                                    <a href="#" class="project__description--link">
+                                    <a href="https://feedback-survey-react.herokuapp.com/" class="project__description--link" target="_blank">
                                         <i class="fas fa-link"></i>
                                     </a>
                                 </div>
